# univ2-wasm

./: Cargo.toml  README.md  expanded
src/: erc20.rs  main.rs
